name:                chrome-remote-interface-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/chrome-remote-interface-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable chrome-remote-interface-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Chrome.Target
                     , Chrome.Target.DebuggingURL
                     , Chrome.Target.Client
                     , Chrome.Target.Message
                     , Chrome.Target.Message.TH
                     , Chrome.Target.Async
                     , Chrome.API.Page
                     , Chrome.API.Page.Types
                     , Chrome.API.DOM
                     , Chrome.API.DOM.Types
                     , Chrome.API.Network
                     , Chrome.API.Network.Types
                     , Chrome.API.DOMDebugger
                     , Chrome.API.DOMDebugger.Types
                     , Chrome.API.Debugger
                     , Chrome.API.Debugger.Types
                     , Chrome.API.Runtime
                     , Chrome.API.Runtime.Types
                     , Chrome.API.Emulation
                     , Chrome.API.Emulation.Types
                     , Chrome.API.Input
                     , Chrome.API.Input.Types
                     , Chrome.API.Profiler
                     , Chrome.API.Profiler.Types
                     , Chrome.API.Schema
                     , Chrome.API.Schema.Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , http-client
                     , aeson
                     , websockets
                     , network
                     , url
                     , text
                     , mtl
                     , bytestring
                     , base64-bytestring
                     , containers
                     , async
                     , lifted-async
                     , transformers
                     , random
                     , stm
